# AIShell

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  blog_post.md.resolved  brave.html  build_output.txt  check_db.py  main.cpp  test_output.txt  test_output_utf8.txt  tests_report.md  tests_shell.cpp  tldr_database.json
.agents/workflows/: senior_engineer_mindset.md
.github/workflows/: package.yml
scripts/: build_portable.ps1  generate_test_data.py  generate_tldr_db.py
src/: Application.cpp  Application.h  Application_old.cpp  CommandDatabase.json  CommandFirewall.h  CommandParser.cpp  CommandParser.h  GuiRenderer.cpp  GuiRenderer.h  IAIProvider.h  IKnowledgeBase.h  InputManager.cpp  InputManager.h  JsonKnowledgeBase.cpp  JsonKnowledgeBase.h  LlamaManager.cpp  LlamaManager.h  LlamaManager_old.cpp  Logger.h  RAGManager.h  ShellManager.h  WebSearchManager.cpp  WebSearchManager.h  Window.cpp  Window.h
tests/: AITestSuite.h  CommandData.h  CommandTestCase.h  IAITestCase.h  TestRunner.cpp
